last commit for now

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <h1>National Parks Search</h1>
 
         <form>
-            <label for="state">State you would like to visit:</label>
+            <label for="state">State you would like to visit:(use two letter codes, you can search for multiple states by adding commas between the two letter codes</label>
             <input id="state" type="text" name="state you want to visit"></input>
+            <br>
             <label for="numberOfResults">Maximum Number of results (default is 10):</label>
             <input id="numberOfResults" type="number" name="maximum number of results returned"></input>
+            <br>
             <input type="submit" value="search for parks">
         </form>
         <br>
